# BitcoinExplorer

./: .gitignore  docker-compose.yml
.github/workflows/: ci-cd.yml
bitcoin-explorer/: DockerFile  package-lock.json  package.json
bitcoin-explorer-api/: package-lock.json  package.json  server.js
bitcoin-explorer/src/components/: BTCPrice.tsx  Blocks.tsx  Cards_Blocks.tsx  Cards_Transactions.tsx  Price_Graph.tsx
bitcoin-explorer/src/pages/api/: offchain.ts
bitcoin_explorer/: package-lock.json  package.json
bitcoin_explorer/src/app/: page.tsx
bitcoin_explorer/src/app/price/: page.tsx
bitcoin_explorer/src/components/: Cards_Blocks.tsx
bitcoin_explorer/src/components/layout/: Header.tsx
bitcoin_explorer/src/components/ui/: BitcoinChart.tsx
bitcoin_explorer/src/hooks/: types.ts  useWebSocket.ts
bitcoin_explorer/src/pages/api/: offchain.ts  onchain.ts
bitcoin_explorer_frontend/: package-lock.json  package.json  vite.config.ts
bitcoin_explorer_frontend/src/: App.tsx
bitcoin_explorer_frontend/src/components/: Blocks.tsx  Cards_Blocks.tsx  Price_Graph.tsx
bitcoin_explorer_frontend/src/services/: apiServices.ts
bitcoin_explorer_ingestion/: Cargo.toml  Dockerfile
bitcoin_explorer_ingestion/src/: main.rs  offchain.rs  onchain.rs
