[package]
name = "bitcoin_explorer_ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "0.19.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
